# learn-proxy-program

kami-proxy-program/: .binpath  Cargo.toml  README.md  build.rs
kami-proxy-program/io/: Cargo.toml
kami-proxy-program/io/src/: lib.rs
kami-proxy-program/src/: lib.rs
kami-proxy-program/tests/: test.rs
kami-target-program/: .binpath  Cargo.toml
kami-target-program/src/: lib.rs
kami-wordle-gear-academy/: .binpath  Cargo.toml  build.rs
kami-wordle-gear-academy/io/: Cargo.toml
kami-wordle-gear-academy/io/src/: lib.rs
kami-wordle-gear-academy/src/: lib.rs
