workspace = { members = ["io",] }
[package]
name = "kami-proxy-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }
io.path = "io"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }
io.path = "io"

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }
io.path = "io"
kami-target-program = { path = "../kami-target-program" }
