workspace = { members = ["io"] }
[package]
name = "kami-wordle-gear-academy"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }
io.path = "io"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }
io.path = "io"
