[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }
gmeta = { git = "https://github.com/gear-tech/gear", tag= "v1.1.0" }